POWR-1348 Update event display
Set up fields to use template

--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -42,73 +42,56 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - group_datetime
+        - group_date
+        - field_all_day
         - field_start_date
-        - field_location
+        - field_start_time
+        - field_end_time
         - field_end_date
-        - group_date_and_time
+        - group_time
+        - field_location
         - posted_in_entity_view_1
         - field_summary
-        - field_all_day
-        - group_start_to_end_time
         - field_body_content
-        - field_start_time
-        - field_end_time
   field_group:
-    group_date_and_time:
-      children:
-        - field_start_date
-        - field_end_date
-      parent_name: group_datetime
-      weight: 2
-      format_type: html_element
-      format_settings:
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-        id: ''
-        classes: event--date
-      label: Date
-      region: content
-    group_start_to_end_time:
+    group_time:
       children:
         - field_all_day
         - field_start_time
         - field_end_time
-      parent_name: group_datetime
+      parent_name: ''
       weight: 3
       format_type: html_element
       format_settings:
+        id: ''
+        classes: ''
         element: div
         show_label: false
         label_element: h3
+        label_element_classes: ''
         attributes: ''
         effect: none
         speed: fast
-        id: ''
-        classes: 'event--time '
-      label: Time
+      label: 'Event time'
       region: content
-    group_datetime:
+    group_date:
       children:
-        - group_date_and_time
-        - group_start_to_end_time
+        - field_start_date
+        - field_end_date
       parent_name: ''
       weight: 0
       format_type: html_element
       format_settings:
+        id: ''
+        classes: ''
         element: div
         show_label: false
         label_element: h3
+        label_element_classes: ''
         attributes: ''
         effect: none
         speed: fast
-        id: ''
-        classes: mb-2
-      label: Datetime
+      label: 'Event date'
       region: content
 id: node.event.default
 targetEntityType: node
@@ -117,7 +100,7 @@ mode: default
 content:
   field_all_day:
     type: boolean
-    weight: 3
+    weight: 0
     region: content
     label: hidden
     settings:
@@ -127,41 +110,20 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: all-day
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_body_content:
     type: text_default
-    weight: 4
+    weight: 7
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
   field_end_date:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       timezone_override: ''
@@ -172,7 +134,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: to
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -198,43 +160,22 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 5
+    weight: 2
     label: hidden
     settings:
       time_format: 'g:i a'
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: to
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: 'event--end-time pl-1'
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
     type: time_formatter
     region: content
   field_location:
-    weight: 1
+    weight: 4
     label: above
     settings:
       view_mode: teaser
@@ -251,7 +192,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_start_date:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       timezone_override: ''
@@ -259,72 +200,30 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
     type: datetime_default
     region: content
   field_start_time:
-    weight: 4
+    weight: 1
     label: hidden
     settings:
       time_format: 'g:i a'
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: 'event--start-time pl-2'
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
     type: time_formatter
     region: content
   field_summary:
-    weight: 3
+    weight: 6
     label: hidden
     settings:
       link_to_entity: false
@@ -360,7 +259,7 @@ content:
     type: string
     region: content
   posted_in_entity_view_1:
-    weight: 2
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
