--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -52,12 +52,11 @@ third_party_settings:
     regions:
       second:
         - node_title
-        - group_datetime
+        - group_date
+        - group_time
         - field_start_date
-        - group_date_and_time
-        - field_end_date
         - field_all_day
-        - group_start_to_end_time
+        - field_end_date
         - field_start_time
         - field_end_time
     fields:
@@ -77,60 +76,44 @@ third_party_settings:
             lb-col: false
             classes: {  }
   field_group:
-    group_date_and_time:
+    group_date:
       children:
         - field_start_date
         - field_end_date
-      parent_name: group_datetime
-      weight: 3
-      format_type: html_element
-      format_settings:
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-        id: ''
-        classes: event--date
-      label: Date
-      region: hidden
-    group_start_to_end_time:
-      children:
-        - field_all_day
-        - field_start_time
-        - field_end_time
-      parent_name: group_datetime
-      weight: 4
-      format_type: html_element
-      format_settings:
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-        id: ''
-        classes: event--time
-      label: Time
-      region: hidden
-    group_datetime:
-      children:
-        - group_date_and_time
-        - group_start_to_end_time
       parent_name: ''
       weight: 1
       format_type: html_element
       format_settings:
+        id: ''
+        classes: ''
         element: div
         show_label: false
         label_element: h3
+        label_element_classes: ''
         attributes: ''
         effect: none
         speed: fast
+      label: 'Event date'
+      region: hidden
+    group_time:
+      children:
+        - field_all_day
+        - field_start_time
+        - field_end_time
+      parent_name: ''
+      weight: 2
+      format_type: html_element
+      format_settings:
         id: ''
-        classes: mb-2
-      label: Datetime
+        classes: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Event time'
       region: hidden
 id: node.event.related
 targetEntityType: node
@@ -139,7 +122,7 @@ mode: related
 content:
   field_all_day:
     type: boolean
-    weight: 3
+    weight: 4
     region: second
     label: hidden
     settings:
@@ -149,33 +132,43 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_end_date:
+    weight: 4
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: datetime_default
+    region: second
+  field_end_time:
+    weight: 6
+    label: hidden
+    settings:
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: time_formatter
+    region: second
+  field_start_date:
     weight: 3
     label: hidden
     settings:
@@ -184,35 +177,14 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: to
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
     type: datetime_default
     region: second
-  field_end_time:
+  field_start_time:
     weight: 5
     label: hidden
     settings:
@@ -220,105 +192,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: to
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
-    type: time_formatter
-    region: second
-  field_start_date:
-    weight: 2
-    label: hidden
-    settings:
-      timezone_override: ''
-      format_type: month_day_year
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
-    type: datetime_default
-    region: second
-  field_start_time:
-    weight: 4
-    label: hidden
-    settings:
-      time_format: 'g:i a'
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
     type: time_formatter
     region: second
 hidden:
