--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -53,15 +53,14 @@ third_party_settings:
       second:
         - 'bundle_field:node'
         - node_title
-        - field_start_date
-        - group_datetime
         - group_date
-        - field_end_date
         - group_time
         - field_summary
         - field_all_day
         - field_start_time
+        - field_start_date
         - field_end_time
+        - field_end_date
     fields:
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
@@ -97,7 +96,7 @@ third_party_settings:
             fi-def-at: false
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 2
         label: hidden
         formatter: default
         settings:
@@ -111,60 +110,44 @@ third_party_settings:
             lb-col: false
             classes: {  }
   field_group:
-    group_datetime:
-      children:
-        - group_date
-        - group_time
-      parent_name: ''
-      weight: 2
-      format_type: html_element
-      format_settings:
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-        id: ''
-        classes: mb-2
-      label: Datetime
-      region: hidden
     group_date:
       children:
         - field_start_date
         - field_end_date
-      parent_name: group_datetime
-      weight: 2
+      parent_name: ''
+      weight: 3
       format_type: html_element
       format_settings:
         id: ''
-        classes: event--date
+        classes: ''
         element: div
         show_label: false
         label_element: h3
+        label_element_classes: ''
         attributes: ''
         effect: none
         speed: fast
-      label: Date
+      label: 'Event date'
       region: hidden
     group_time:
       children:
         - field_all_day
         - field_start_time
         - field_end_time
-      parent_name: group_datetime
-      weight: 3
+      parent_name: ''
+      weight: 4
       format_type: html_element
       format_settings:
         id: ''
-        classes: event--time
+        classes: ''
         element: div
         show_label: false
         label_element: h3
+        label_element_classes: ''
         attributes: ''
         effect: none
         speed: fast
-      label: Time
+      label: 'Event time'
       region: hidden
 id: node.event.search_result
 targetEntityType: node
@@ -173,7 +156,7 @@ mode: search_result
 content:
   field_all_day:
     type: boolean
-    weight: 5
+    weight: 7
     region: second
     label: hidden
     settings:
@@ -183,35 +166,14 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_end_date:
     type: datetime_default
-    weight: 2
+    weight: 9
     region: second
     label: hidden
     settings:
@@ -220,35 +182,14 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: to
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_end_time:
     type: time_formatter
-    weight: 7
+    weight: 9
     region: second
     label: hidden
     settings:
@@ -256,35 +197,14 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: to
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_start_date:
     type: datetime_default
-    weight: 1
+    weight: 8
     region: second
     label: hidden
     settings:
@@ -293,35 +213,14 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_start_time:
     type: time_formatter
-    weight: 6
+    weight: 8
     region: second
     label: hidden
     settings:
@@ -329,34 +228,13 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_summary:
-    weight: 3
+    weight: 6
     label: hidden
     settings:
       link_to_entity: false
