--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -47,15 +47,14 @@ third_party_settings:
     regions:
       second:
         - node_title
-        - group_datetime
-        - field_summary
-        - group_event_date
-        - group_event_time
+        - group_date
+        - group_time
         - field_all_day
-        - field_start_date
+        - field_summary
         - field_start_time
-        - field_end_date
+        - field_start_date
         - field_end_time
+        - field_end_date
     fields:
       node_title:
         plugin_id: node_title
@@ -78,60 +77,44 @@ third_party_settings:
     allow: false
     default: default
   field_group:
-    group_event_date:
+    group_date:
       children:
         - field_start_date
         - field_end_date
-      parent_name: group_datetime
-      weight: 3
-      format_type: html_element
-      format_settings:
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-        id: ''
-        classes: event--date
-      label: Date
-      region: hidden
-    group_event_time:
-      children:
-        - field_all_day
-        - field_start_time
-        - field_end_time
-      parent_name: group_datetime
-      weight: 4
-      format_type: html_element
-      format_settings:
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-        id: ''
-        classes: event--time
-      label: Time
-      region: hidden
-    group_datetime:
-      children:
-        - group_event_date
-        - group_event_time
       parent_name: ''
       weight: 1
       format_type: html_element
       format_settings:
+        id: ''
+        classes: ''
         element: div
         show_label: false
         label_element: h3
+        label_element_classes: ''
         attributes: ''
         effect: none
         speed: fast
+      label: 'Event date'
+      region: hidden
+    group_time:
+      children:
+        - field_all_day
+        - field_start_time
+        - field_end_time
+      parent_name: ''
+      weight: 2
+      format_type: html_element
+      format_settings:
         id: ''
-        classes: mb-2
-      label: Datetime
+        classes: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Event time'
       region: hidden
 id: node.event.teaser
 targetEntityType: node
@@ -150,32 +133,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: div
-            fi-cl: event--date
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_end_date:
     type: datetime_default
     weight: 6
@@ -187,32 +149,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: to
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_end_time:
     type: time_formatter
     weight: 6
@@ -223,32 +164,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: to
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_start_date:
     type: datetime_default
     weight: 5
@@ -260,32 +180,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_start_time:
     type: time_formatter
     weight: 5
@@ -296,35 +195,14 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: span
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_summary:
     type: string
-    weight: 2
+    weight: 5
     region: second
     label: hidden
     settings:
