POWR-1348 Update news display
• Add published field
• Update displays to use templates

--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -22,7 +22,6 @@ dependencies:
   module:
     - datetime
     - ds
-    - field_group
     - panelizer
     - user
 third_party_settings:
@@ -52,9 +51,8 @@ third_party_settings:
         - field_featured_media
       second:
         - node_title
-        - group_date
-        - field_published_on
         - field_summary
+        - field_published_on
     fields:
       node_title:
         plugin_id: node_title
@@ -71,24 +69,6 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-  field_group:
-    group_date:
-      children:
-        - field_published_on
-      parent_name: ''
-      weight: 2
-      format_type: html_element
-      format_settings:
-        id: ''
-        classes: mb-2
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-      label: Date
-      region: hidden
 id: node.news.featured
 targetEntityType: node
 bundle: news
@@ -121,32 +101,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: 'Published on'
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_summary:
     weight: 3
     label: hidden
