--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -139,10 +139,10 @@ content:
     type: datetime_default
     weight: 3
     region: content
-    label: inline
+    label: hidden
     settings:
       timezone_override: ''
-      format_type: long
+      format_type: month_day_year
     third_party_settings:
       ds:
         ft:
