--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -22,7 +22,6 @@ dependencies:
   module:
     - datetime
     - ds
-    - field_group
     - panelizer
     - user
 third_party_settings:
@@ -51,9 +50,8 @@ third_party_settings:
       second:
         - 'bundle_field:node'
         - node_title
-        - group_date
-        - field_summary
         - field_published_on
+        - field_summary
     fields:
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
@@ -102,24 +100,6 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-  field_group:
-    group_date:
-      children:
-        - field_published_on
-      parent_name: ''
-      weight: 2
-      format_type: html_element
-      format_settings:
-        id: ''
-        classes: mb-2
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-      label: Date
-      region: hidden
 id: node.news.search_result
 targetEntityType: node
 bundle: news
@@ -127,7 +107,7 @@ mode: search_result
 content:
   field_published_on:
     type: datetime_default
-    weight: 4
+    weight: 2
     region: second
     label: hidden
     settings:
@@ -136,32 +116,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: 'Published on'
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: div
-            ow-cl: mb-2
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
   field_summary:
     type: string
     weight: 3
