POWR-1348 Add display date field to project form

--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -46,7 +46,7 @@ third_party_settings:
         - field_enable_documents_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: fieldset
       format_settings:
         id: ''
@@ -73,6 +73,13 @@ content:
     type: chosen_select
     region: content
   field_display_date:
+    type: string_textfield
+    weight: 14
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_email:
     weight: 11
     settings:
@@ -175,7 +182,7 @@ content:
     type: bootstrap_date_widget
     region: content
   field_featured_content:
-    weight: 15
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -184,7 +191,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 16
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -208,7 +215,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 17
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -241,7 +248,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_search_keywords:
-    weight: 18
+    weight: 19
     settings:
       size: 60
       placeholder: ''
