--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -76,6 +76,13 @@ targetEntityType: group
 bundle: project
 mode: default
 content:
+  field_address:
+    weight: 21
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: address_default
+    region: content
   field_display_date:
     weight: 5
     label: hidden
@@ -83,12 +90,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-  field_address:
-    weight: 21
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: address_default
     region: content
   field_email:
     weight: 23
