POWR-1348 Export local config

--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -202,7 +202,9 @@ content:
 hidden:
   changed: true
   created: true
+  field_address: true
   field_audience: true
+  field_email: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
@@ -213,6 +215,7 @@ hidden:
   field_featured_media: true
   field_legacy_path: true
   field_parent_group: true
+  field_phone: true
   field_project_status: true
   field_project_type: true
   field_search_keywords: true
