POWR-1362 small changes to help text to improve usage

--- a/web/sites/default/config/field.field.group.program.field_featured_media.yml
+++ b/web/sites/default/config/field.field.group.program.field_featured_media.yml
@@ -17,7 +17,7 @@ field_name: field_featured_media
 entity_type: group
 bundle: program
 label: 'Featured media'
-description: 'Specify a featured media item to appear with your content.'
+description: 'Specify a featured media item to appear when this item is related or feature throughout the site.'
 required: false
 translatable: true
 default_value: {  }
