--- a/web/sites/default/config/field.field.node.news.field_featured_media.yml
+++ b/web/sites/default/config/field.field.node.news.field_featured_media.yml
@@ -17,7 +17,7 @@ field_name: field_featured_media
 entity_type: node
 bundle: news
 label: 'Featured media'
-description: 'Specify a featured media item to appear with your content.'
+description: 'Specify a featured media item to appear when this item is related or feature throughout the site.'
 required: false
 translatable: false
 default_value: {  }
