--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,7 @@
         "drupal/honeypot": "^1.29",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
-        "drupal/lightning_layout": "~2.0.0",
+        "drupal/language_switcher_extended": "^1.0@beta",
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
         "drupal/maxlength": "^1.0",
@@ -150,8 +150,7 @@
         "symfony/css-selector": "~2.8|~3.0"
     },
     "conflict": {
-        "drupal/drupal": "*",
-        "doctrine/common": ">2.8"
+        "drupal/drupal": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
