--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -5,7 +5,6 @@ module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
   adminimal_admin_toolbar: 0
-  aggregator: 0
   allowed_formats: 0
   anonymous_login: 0
   automated_cron: 0
@@ -19,6 +18,7 @@ module:
   chosen_lib: 0
   ckeditor: 0
   ckeditor_config: 0
+  clamav: 0
   cleave: 0
   color: 0
   components: 0
@@ -57,6 +57,7 @@ module:
   environment_indicator: 0
   eva: 0
   facets: 0
+  feeds: 0
   field: 0
   field_defaults: 0
   field_group: 0
