--- a/web/sites/default/config/field.field.feeds_feed.police_flash_alerts.field_group.yml
+++ b/web/sites/default/config/field.field.feeds_feed.police_flash_alerts.field_group.yml
@@ -1,26 +1,25 @@
-uuid: a8aac41c-2839-4e1f-887a-a7831feedabc
+uuid: a38ab890-04f3-48c9-882c-2322aed51b89
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.group.field_featured_groups
+    - feeds.feed_type.police_flash_alerts
+    - field.storage.feeds_feed.field_group
     - group.type.bureau_office
-    - group.type.program
-    - group.type.project
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: group.project.field_featured_groups
-field_name: field_featured_groups
-entity_type: group
-bundle: project
-label: 'Featured groups'
+id: feeds_feed.police_flash_alerts.field_group
+field_name: field_group
+entity_type: feeds_feed
+bundle: police_flash_alerts
+label: Group
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -28,10 +27,8 @@ settings:
   handler_settings:
     target_bundles:
       bureau_office: bureau_office
-      program: program
-      project: project
     sort:
       field: _none
     auto_create: false
-    auto_create_bundle: bureau_office
+    auto_create_bundle: ''
 field_type: entity_reference
