--- a/web/sites/default/config/field.field.node.news.field_body_content.yml
+++ b/web/sites/default/config/field.field.node.news.field_body_content.yml
@@ -11,7 +11,9 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
+    full_html: full_html
     simplified_editor_with_media_embed: simplified_editor_with_media_embed
+    basic_style_editor: '0'
     simple_editor: '0'
     rich_text: '0'
     plain_text: '0'
