--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -4,7 +4,6 @@ address_map_link: 1.0.0
 admin_toolbar: 0.0.0
 admin_toolbar_tools: 0.0.0
 adminimal_admin_toolbar: 0.0.0
-aggregator: 8.7.7
 allowed_formats: 1.1.0
 anonymous_login: 1.1.0
 automated_cron: 0.0.0
@@ -62,6 +61,7 @@ environment_indicator: 3.6.0
 eva: 1.3.0
 extlink: 1.1.0
 facets: 0.0.0
+feeds: 3.0.0-alpha5
 field: 0.0.0
 field_defaults: 1.0.0-rc2
 field_group: 0.0.0
