--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -5,28 +5,28 @@ dependencies:
   module:
     - search_api_solr
     - taxonomy
-    - node
     - group
+    - node
     - search_api
     - portland
   config:
-    - field.storage.node.field_community_actions
-    - field.storage.node.field_audience
-    - field.storage.node.field_end_date
-    - field.storage.node.field_end_time
+    - field.storage.group.field_audience
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
+    - field.storage.group.field_search_keywords
+    - field.storage.group.field_shortname_or_acronym
+    - field.storage.group.field_summary
+    - field.storage.group.field_topics
+    - field.storage.node.field_audience
+    - field.storage.node.field_community_actions
+    - field.storage.node.field_end_date
+    - field.storage.node.field_end_time
     - field.storage.node.field_popular
     - field.storage.node.field_published_on
     - field.storage.node.field_search_keywords
-    - field.storage.group.field_shortname_or_acronym
     - field.storage.node.field_start_date
     - field.storage.node.field_start_time
-    - field.storage.group.field_summary
     - field.storage.node.field_summary
-    - field.storage.group.field_audience
-    - field.storage.group.field_search_keywords
-    - field.storage.group.field_topics
     - field.storage.node.field_topics
     - search_api.server.searchstax
 third_party_settings:
@@ -132,7 +132,7 @@ field_settings:
     label: Title
     datasource_id: 'entity:node'
     property_path: title
-    type: 'solr_text_custom:edge'
+    type: text
     dependencies:
       module:
         - node
@@ -188,7 +188,7 @@ field_settings:
     label: 'Search keywords'
     datasource_id: 'entity:node'
     property_path: field_search_keywords
-    type: 'solr_text_custom:edge'
+    type: text
     boost: !!float 21
     dependencies:
       config:
@@ -248,7 +248,7 @@ field_settings:
     label: 'Search keywords'
     datasource_id: 'entity:group'
     property_path: field_search_keywords
-    type: 'solr_text_custom:edge'
+    type: text
     boost: !!float 21
     dependencies:
       config:
@@ -265,7 +265,7 @@ field_settings:
     label: Title
     datasource_id: 'entity:group'
     property_path: label
-    type: 'solr_text_custom:edge'
+    type: text
     boost: !!float 13
     dependencies:
       module:
@@ -321,7 +321,7 @@ field_settings:
     label: Name
     datasource_id: 'entity:taxonomy_term'
     property_path: name
-    type: 'solr_text_custom:edge'
+    type: text
     boost: !!float 21
     dependencies:
       module:
