--- a/web/sites/default/config/field.field.group.project.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.project.field_parent_group.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.storage.group.field_parent_group
-    - group.type.advisory_group
     - group.type.bureau_office
     - group.type.elected_official
     - group.type.program
@@ -26,21 +25,15 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: views
+  handler: 'default:group'
   handler_settings:
     target_bundles:
-      advisory_group: advisory_group
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
-      project: project
     sort:
       field: label
       direction: ASC
     auto_create: false
     auto_create_bundle: bureau_office
-    view:
-      view_name: entity_reference_parent_group
-      display_name: entity_reference_1
-      arguments: {  }
 field_type: entity_reference
