--- a/web/sites/default/config/field.field.group.project.field_parent_group.yml
+++ b/web/sites/default/config/field.field.group.project.field_parent_group.yml
@@ -18,8 +18,8 @@ id: group.project.field_parent_group
 field_name: field_parent_group
 entity_type: group
 bundle: project
-label: 'Parent bureau, office, or program'
-description: 'Each program has one primary parent group used for navigation and listing programs that belong within that parent group. Programs without a single parent, should not use this field.'
+label: 'Parent bureau, office, program, or project'
+description: 'Each project has one or more parent group used for navigation and listing projects that belong within that parent group.'
 required: false
 translatable: true
 default_value: {  }
